--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -1,64 +1,289 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "a6737e5e-08a9-498a-83eb-969b257ebb1c",
+   "id": "482475e2-446a-406e-b1fe-f1750a124d84",
    "metadata": {},
    "source": [
-    "# Question: What percent of people had a family member on the Titanic?"
+    "# What percent of passengers had a family member on board\n",
+    "\n",
+    "Question: What percent of passengers had a family member(s) on the Titanic?\n",
+    "This analysis is an observational study, not an experimental study. I'm taking the data from the data set and analyzing how many passengers had a family member on the titanic to figure out what percent of passengers had a family member on the Titanic.By adding spouse and siblings together, these two values together for each passenger, I calculated the total number of immediate family members a person had on board. I created a new derived column to represent this.This tells us more than just a number. It helps us understand what it might have been like for the people on the ship. Many passengers weren’t alone and they were with siblings, parents, children, or their spouse. That means the tragedy didn’t just affect individuals, it affected entire families.\n",
+    "\n",
+    "Also, knowing who had family could help explain other patterns in the data, like who survived. For example, maybe people with family helped each other, or maybe they stayed behind to help loved ones. The sampling method I used for my data is the census sampling. I took the entire population to find out the percentage of family members on board. Since the dataset includes everyone who was on the Titanic (or as many as were recorded), I didn’t have to choose a smaller sample. This way, the results represent the whole group of passengers, not just a part of them.\n",
+    "\n",
+    "A possible bias could be the fact that the data set didn't include the entire population, meaning some records got lost, etc. The dataset also only counts siblings, spouses, parents, and children. Other family members like cousins, aunts, uncles, who might have been traveling together are not included. This means some family groups might be undercounted.\r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9175710b-4419-41c1-a1bf-a9377bb0814e",
+   "metadata": {},
+   "source": [
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d170eee6-7515-478e-8375-513f31f81cb4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 4\n",
-    "print (x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "61b76c2a-8558-492f-bbb0-e48fc55612bc",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 892 entries, 0 to 891\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   0       892 non-null    object\n",
-      " 1   1       892 non-null    object\n",
-      " 2   2       892 non-null    object\n",
-      " 3   3       892 non-null    object\n",
-      " 4   4       892 non-null    object\n",
-      " 5   5       715 non-null    object\n",
-      " 6   6       892 non-null    object\n",
-      " 7   7       892 non-null    object\n",
-      " 8   8       892 non-null    object\n",
-      " 9   9       892 non-null    object\n",
-      " 10  10      205 non-null    object\n",
-      " 11  11      890 non-null    object\n",
-      "dtypes: object(12)\n",
-      "memory usage: 83.8+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PassengerId</td>\n",
+       "      <td>Survived</td>\n",
+       "      <td>Pclass</td>\n",
+       "      <td>Name</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>Age</td>\n",
+       "      <td>SibSp</td>\n",
+       "      <td>Parch</td>\n",
+       "      <td>Ticket</td>\n",
+       "      <td>Fare</td>\n",
+       "      <td>Cabin</td>\n",
+       "      <td>Embarked</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.925</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>887</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Montvila, Rev. Juozas</td>\n",
+       "      <td>male</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>211536</td>\n",
+       "      <td>13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>888</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Graham, Miss. Margaret Edith</td>\n",
+       "      <td>female</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>112053</td>\n",
+       "      <td>30</td>\n",
+       "      <td>B42</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>889</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Johnston, Miss. Catherine Helen \"Carrie\"</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>W./C. 6607</td>\n",
+       "      <td>23.45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>890</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Behr, Mr. Karl Howell</td>\n",
+       "      <td>male</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>111369</td>\n",
+       "      <td>30</td>\n",
+       "      <td>C148</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>891</th>\n",
+       "      <td>891</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Dooley, Mr. Patrick</td>\n",
+       "      <td>male</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>370376</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>892 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              0         1       2   \\\n",
+       "0    PassengerId  Survived  Pclass   \n",
+       "1              1         0       3   \n",
+       "2              2         1       1   \n",
+       "3              3         1       3   \n",
+       "4              4         1       1   \n",
+       "..           ...       ...     ...   \n",
+       "887          887         0       2   \n",
+       "888          888         1       1   \n",
+       "889          889         0       3   \n",
+       "890          890         1       1   \n",
+       "891          891         0       3   \n",
+       "\n",
+       "                                                    3       4    5      6   \\\n",
+       "0                                                 Name     Sex  Age  SibSp   \n",
+       "1                              Braund, Mr. Owen Harris    male   22      1   \n",
+       "2    Cumings, Mrs. John Bradley (Florence Briggs Th...  female   38      1   \n",
+       "3                               Heikkinen, Miss. Laina  female   26      0   \n",
+       "4         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   35      1   \n",
+       "..                                                 ...     ...  ...    ...   \n",
+       "887                              Montvila, Rev. Juozas    male   27      0   \n",
+       "888                       Graham, Miss. Margaret Edith  female   19      0   \n",
+       "889           Johnston, Miss. Catherine Helen \"Carrie\"  female  NaN      1   \n",
+       "890                              Behr, Mr. Karl Howell    male   26      0   \n",
+       "891                                Dooley, Mr. Patrick    male   32      0   \n",
+       "\n",
+       "        7                 8        9      10        11  \n",
+       "0    Parch            Ticket     Fare  Cabin  Embarked  \n",
+       "1        0         A/5 21171     7.25    NaN         S  \n",
+       "2        0          PC 17599  71.2833    C85         C  \n",
+       "3        0  STON/O2. 3101282    7.925    NaN         S  \n",
+       "4        0            113803     53.1   C123         S  \n",
+       "..     ...               ...      ...    ...       ...  \n",
+       "887      0            211536       13    NaN         S  \n",
+       "888      0            112053       30    B42         S  \n",
+       "889      2        W./C. 6607    23.45    NaN         S  \n",
+       "890      0            111369       30   C148         C  \n",
+       "891      0            370376     7.75    NaN         Q  \n",
+       "\n",
+       "[892 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -66,29 +291,43 @@
     "\n",
     "df = pd.read_csv(\"titanic.csv\", encoding='utf-8')\n",
     "df = pd.read_csv(\"titanic.csv\", header=None)\n",
-    "df.info()"
+    "df.head(893)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4277bcb3-bd6e-42a4-b1f2-5f01efca3ae9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The answer is 39.73%. This means that 39.73% of passengers on the Titanic had at least one family member (a sibling, spouse, parent, or child) traveling with them.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv(\"titanic.csv\")\n",
+    "\n",
+    "# Define \"family member\" as having at least 1 sibling/spouse (SibSp) or parent/child (Parch)\n",
+    "df[\"Has_Family\"] = (df[\"SibSp\"] + df[\"Parch\"]) > 0\n",
+    "\n",
+    "# Calculate percentage of passengers with family onboard\n",
+    "percent_with_family = df[\"Has_Family\"].mean() *100\n",
+    "percent_with_family = df[\"Has_Family\"].mean() * 100\n",
+    "print(f\"The answer is {percent_with_family:.2f}%. This means that {percent_with_family:.2f}% of passengers on the Titanic had at least one family member (a sibling, spouse, parent, or child) traveling with them.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c65c7ce-5aad-4c3b-90d7-9f162c346a8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e05c6af3-adab-4948-b448-e1989e04d4b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57582c4c-f046-498a-8275-71404734932f",
+   "id": "f4b7424f-cfd4-425e-81b9-6b8c3e468f91",
    "metadata": {},
    "outputs": [],
    "source": []
