--- a/Toptracks.ipynb
+++ b/Toptracks.ipynb
@@ -94,7 +94,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "1a255bf4-d003-4ec5-9676-70960aa19239",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -153,9 +155,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d09d5f1-501d-45ea-92f3-f5d59bc6a1f7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "One conclusion you can make from this data is that Pop is the most dominant genre in Spotify’s Top Tracks of 2024 (USA), making up 32% of the songs, followed by Country at 22% and Hip-Hop at 18%. This shows that these three genres alone account for over 70% of the top tracks, while other genres like Indie Rock, Pop Rock, and Alternative Pop each make up only 2%, showing they are much less common. This suggests that mainstream listeners are heavily favoring Pop, Country, and Hip-Hop music in 2024.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83d44066-222f-4374-8af9-1011566f41fa",
+   "id": "5b0dd529-1bc2-48b8-8641-236a2821fab0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -163,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0dd529-1bc2-48b8-8641-236a2821fab0",
+   "id": "6d84a5b1-de2c-44fe-8722-8a1184bf6ded",
    "metadata": {},
    "outputs": [],
    "source": []
